<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">RaplaPreviewWidget</string>

    <string name="textViewMain_standard">Mathematik II</string>
    <string name="textViewSubtext_standard">F180.2 Hörsaal Technik/INF</string>
    <string name="textViewWeekday_standard">Do (44 d)</string>
    <string name="textViewDate_standard">04.08.2012</string>
    <string name="textViewTime_standard">08:40 - 09:12</string>
    <string name="textViewReload">[R]</string>
    <string name="btn_refresh_description">Reload</string>

</resources>