<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_height="50dp"
    android:layout_width="300dp"
    android:background="@drawable/appwidget_dark_bg"
    android:minHeight="4dp"
    android:paddingLeft="8dp"
    android:paddingTop="4dp"
    android:paddingRight="4dp"
    android:paddingBottom="4dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewMain_standard"
            android:id="@+id/textViewMain"
            style="@style/RaVi_MainLabelTheme" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/textViewSubtext_standard"
            android:id="@+id/textViewSubText"
            style="@style/RaVi_SubLabelTheme"
            android:textStyle="italic"
            android:gravity="bottom"
            android:paddingBottom="1dp" />
    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="0dp"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:gravity="right">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="14dp"
            android:gravity="right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:text="@string/textViewWeekday_standard"
                android:id="@+id/textViewWeekday"
                style="@style/RaVi_SideLabelTheme" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/buttonReload"
                android:src="@drawable/btn_refresh"
                android:paddingLeft="4dp"
                android:contentDescription="@string/btn_refresh_description"
                android:clickable="true"
                android:adjustViewBounds="true" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/textViewDate_standard"
            android:id="@+id/textViewDate"
            android:layout_weight="1"
            style="@style/RaVi_SideLabelTheme"
            android:paddingTop="1dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:text="@string/textViewTime_standard"
            android:id="@+id/textViewTime"
            android:layout_weight="1"
            style="@style/RaVi_SideLabelTheme"
            android:paddingTop="1dp" />

    </LinearLayout>

</LinearLayout>